--- a/src/components/ui/header/Header.scss
+++ b/src/components/ui/header/Header.scss
@@ -39,7 +39,7 @@
         text-align: left;
 
         &.active {
-          border-bottom: 5px solid #9867e9;
+          border-bottom: 5px solid #EA7704;
           padding: 22px 0px;
         }
       }
