--- a/src/pages/(loggedIn)/approveGuests/ApproveGuests.scss
+++ b/src/pages/(loggedIn)/approveGuests/ApproveGuests.scss
@@ -15,6 +15,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      background: #fff !important;
       // width: 380px;
 
       cursor: pointer !important;
