--- a/src/pages/(loggedIn)/deeksha/DeekshaContactForm.scss
+++ b/src/pages/(loggedIn)/deeksha/DeekshaContactForm.scss
@@ -188,7 +188,7 @@
   justify-content: space-between;
 
   span {
-    color: #9867E9;
+    color: #EA7704 !important;
     font-weight: bold;
     margin-left: -5%;
     cursor: pointer;
