--- a/src/pages/(loggedIn)/donation/AllDonationDetails.scss
+++ b/src/pages/(loggedIn)/donation/AllDonationDetails.scss
@@ -204,7 +204,7 @@
             }
 
             .apply-btn {
-                background: #8b5cf6;
+                background: #EA7704 !important;
                 color: white;
                 border: none;
             }
