--- a/src/pages/applicationForm/WelcomePage.scss
+++ b/src/pages/applicationForm/WelcomePage.scss
@@ -9,7 +9,7 @@
     .overlay {
       width: 100%;
       height: 100%; // Ensure it takes full height
-      background-color: rgba(0, 0, 0, 0.4);
+      // background-color: rgba(0, 0, 0, 0.4);
       display: flex;
       justify-content: center;
       align-items: center;
