--- a/src/pages/(loggedIn)/checkInDetails/CheckInDetails.scss
+++ b/src/pages/(loggedIn)/checkInDetails/CheckInDetails.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   gap: 30px;
-  background-color: #ffffff;
+  background: #fff2ea !important;
 
   .check-in-datails,
   .scanned-qr-main-section {
@@ -11,6 +11,7 @@
     // width: 50%;
     // height: 795px;
     height: auto;
+    background: #fff !important;
   }
 
   .check-in-datails {
