--- a/src/pages/(loggedIn)/deeksha/DeekshaConsentForm.scss
+++ b/src/pages/(loggedIn)/deeksha/DeekshaConsentForm.scss
@@ -29,7 +29,7 @@
       line-height: 40px;
       text-align: center;
       color: #9867e9;
-      margin-top: 40px
+      margin-top: 40px;
     }
   
     // First Question
@@ -47,32 +47,36 @@
       .deekshaconsentform-options {
         display: flex;
         gap: 20px;
-        margin-top: 10px;
+        margin-top: 20px;
+        align-items: center;
   
         button {
           width: 85px;
           height: 45px;
           background-size: cover;
           border: none;
-          background-color: white;
+          background-color: transparent;
           box-shadow: none;
           cursor: pointer;
+          padding: 0;
+          display: flex;
+          align-items: center;
+          justify-content: center;
   
-          // &.yes {
-          //   background-image: url(#{$YesIcon}); // Replace with correct variable
-          // }
+          @media (max-width: 768px) {
+            width: 80px;
+            height: 42px;
+          }
   
-          // &.yes-selected {
-          //   background-image: url(#{$Yes1Icon}); // Replace with correct variable
-          // }
+          @media (max-width: 480px) {
+            width: 75px;
+            height: 40px;
+          }
   
-          // &.no {
-          //   background-image: url(#{$NoIcon});
-          // }
-  
-          // &.no-selected {
-          //   background-image: url(#{$No1Icon});
-          // }
+          @media (max-width: 360px) {
+            width: 65px;
+            height: 35px;
+          }
         }
       }
     }
@@ -82,6 +86,23 @@
       object-fit: contain;
       width: 100%;
       height: 100%;
+      max-width: 85px;
+      max-height: 45px;
+
+      @media (max-width: 768px) {
+        max-width: 80px;
+        max-height: 42px;
+      }
+
+      @media (max-width: 480px) {
+        max-width: 75px;
+        max-height: 40px;
+      }
+
+      @media (max-width: 360px) {
+        max-width: 65px;
+        max-height: 35px;
+      }
     }
   
     // Navigation Buttons
@@ -128,13 +149,12 @@
         }
       }
     }
-  }    
   
-  // Responsive Styles
-  @media (max-width: 768px) {
-    .deekshaconsentform-container {
-      padding: 20px;
+    // Responsive Styles
+    @media (max-width: 768px) {
       max-width: 100%;
+      padding: 20px;
+      margin: 0;
   
       .deekshaconsentform-progress-bar {
         height: 12px;
@@ -143,12 +163,15 @@
       h1 {
         font-size: 24px;
         line-height: 32px;
+        margin-top: 20px;
       }
   
       .deekshaconsentform-question {
+        margin-top: 30px;
+  
         p {
-          font-size: 24px;
-          font-weight: bold;
+          font-size: 18px;
+          line-height: 24px;
         }
   
         .deekshaconsentform-options {
@@ -169,4 +192,64 @@
         }
       }
     }
-  }
+
+    @media (max-width: 480px) {
+      padding: 15px;
+      margin: 0;
+      
+      h1 {
+        font-size: 20px;
+        line-height: 28px;
+      }
+
+      .deekshaconsentform-question {
+        margin-top: 20px;
+        
+        p {
+          font-size: 16px;
+          line-height: 22px;
+        }
+
+        .deekshaconsentform-options {
+          button {
+            width: 65px;
+            height: 35px;
+          }
+        }
+      }
+
+      .deekshaConsentform-button-group {
+        margin-top: 30px;
+        
+        button,
+        .deekshaConsentform-next-button {
+          padding: 10px 20px;
+          font-size: 16px;
+        }
+      }
+    }
+
+    @media (max-width: 360px) {
+      padding: 10px;
+      margin: 0;
+      
+      h1 {
+        font-size: 18px;
+        line-height: 24px;
+      }
+
+      .deekshaconsentform-question {
+        p {
+          font-size: 14px;
+          line-height: 20px;
+        }
+
+        .deekshaconsentform-options {
+          button {
+            width: 55px;
+            height: 30px;
+          }
+        }
+      }
+    }
+}
