--- a/src/pages/(loggedIn)/deeksha/DeekshaDurationForm.scss
+++ b/src/pages/(loggedIn)/deeksha/DeekshaDurationForm.scss
@@ -8,6 +8,18 @@
   width: 75%;
   margin: 0 auto;
 
+  @media screen and (max-width: 1024px) {
+    width: 100%;
+    padding: 20px;
+    margin: 0;
+  }
+  
+  @media screen and (max-width: 768px) {
+    width: 100%;
+    padding: 15px;
+    margin: 0;
+  }
+
   .deekshadurationform-progressBar {
     width: 100%;
     height: 8px;
@@ -32,6 +44,22 @@
     text-align: center;
     color: #9867e9;
     margin-top: 40px;
+
+    @media screen and (max-width: 1024px) {
+      font-size: 28px;
+      line-height: 36px;
+    }
+    
+    @media screen and (max-width: 768px) {
+      font-size: 24px;
+      line-height: 32px;
+    }
+    
+    @media screen and (max-width: 480px) {
+      font-size: 20px;
+      line-height: 28px;
+      margin-top: 20px;
+    }
   }
 
   .deekshadurationform-question {
@@ -39,6 +67,21 @@
     font-weight: 500;
     line-height: 30px;
     margin-top: 40px;
+
+    @media screen and (max-width: 1024px) {
+      font-size: 20px;
+      line-height: 28px;
+    }
+    
+    @media screen and (max-width: 768px) {
+      font-size: 18px;
+      line-height: 26px;
+    }
+    
+    @media screen and (max-width: 480px) {
+      font-size: 16px;
+      line-height: 24px;
+    }
   }
 
   .deekshadurationform-yesNoInput {
@@ -64,6 +107,16 @@
         cursor: pointer;
       }
 
+      @media screen and (max-width: 768px) {
+        width: 100px;
+        height: 55px;
+      }
+
+      @media screen and (max-width: 480px) {
+        width: 120px;
+        height: 65px;
+      }
+
     }
   }
 
@@ -72,10 +125,15 @@
     display: flex;
     align-items: center;
     gap: 20px;
+    
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+      align-items: stretch;
+      gap: 15px;
+    }
 
     .selectContainer {
       border-radius: 5px;
-      border: 1px solid #ccc;
       padding: 2px;
 
       select {
@@ -84,6 +142,14 @@
         border: none;
         color: #515151;
         font-size: 16px;
+
+        @media screen and (max-width: 1024px) {
+          width: 350px;
+        }
+        
+        @media screen and (max-width: 768px) {
+          width: 100%;
+        }
       }
     }
   }
@@ -94,6 +160,21 @@
     flex-wrap: wrap;
     margin-top: 20px;
     margin-left: 9%;
+    
+    @media screen and (max-width: 768px) {
+      margin-left: 0;
+      gap: 15px;
+      justify-content: flex-start;
+    }
+    
+    @media screen and (max-width: 480px) {
+      gap: 10px;
+      
+      label {
+        width: calc(50% - 5px); // Two options per row on mobile
+        font-size: 14px;
+      }
+    }
 
     label {
       display: flex;
@@ -124,27 +205,38 @@
       
       color: #515151;
       font-size: 16px;
+
+      @media screen and (max-width: 768px) {
+        width: 100%;
+      }
     }
   }
 
   .deekshadurationform-button-group {
     display: flex;
+    flex-direction: row;
     justify-content: flex-end;
     gap: 20px;
     margin-top: 40px;
+    width: 423px;
+    margin-left: auto;
+    margin-right: auto;
 
     button,
     .link-button {
       padding: 13px 35px;
-      border-radius: 5px;
       border: none;
       cursor: pointer;
       font-size: 18px;
       text-decoration: none;
+      border-radius: 5px;
     }
 
     .deekshadurationform-back-button {
       background: #e0e0e0;
+      color: #000;
+      width: 120px;
+      text-align: center;
 
       &:hover {
         background: #9a4efc;
@@ -155,88 +247,36 @@
     .deekshadurationform-next-button {
       background: #9a4efc;
       color: #fff;
+      width: 120px;
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       text-decoration: none;
-      padding: 13px 35px;
-      font-size: 18px;
       border-radius: 5px;
-
-      &:hover {
-        text-decoration: underline;
+      
+      &:hover, &:active, &:visited {
+        opacity: 0.9;
+        text-decoration: none;
       }
     }
-  }
-}
 
-/* Responsive Styles */
-@media screen and (max-width: 1024px) {
-  .deekshadurationform {
-    width: 90%;
-  }
-
-  .deekshadurationform-durationOptions {
-    margin-left: 5%;
-  }
-
-  .deekshadurationform-otherDurationInput input {
-    width: 300px;
-  }
-
-  .deekshadurationform-heading {
-    font-size: 28px;
-  }
-
-  .deekshadurationform-question {
-    font-size: 20px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .deekshadurationform {
-    padding: 20px;
-    width: 95%;
-  }
-
-  .deekshadurationform-heading {
-    font-size: 24px;
-  }
-
-  .deekshadurationform-question {
-    font-size: 18px;
-  }
-
-  .deekshadurationform-otherDurationInput input {
-    width: 100%;
-  }
-
-  .deekshadurationform-conditionalFields .selectContainer select {
-    width: 100%;
-  }
-
-  .deekshadurationform-durationOptions {
-    margin-left: 0;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .deekshadurationform-heading {
-    font-size: 20px;
-    margin-top: 20px;
-  }
-
-  .deekshadurationform-question {
-    font-size: 16px;
-  }
-
-  .deekshadurationform-otherDurationInput input {
-    width: 100%;
-  }
-
-  .deekshadurationform-conditionalFields .selectContainer select {
-    width: 100%;
-  }
-
-  .deekshadurationform-button-group {
-    flex-direction: column;
-    gap: 10px;
+    @media screen and (max-width: 480px) {
+      flex-direction: column;
+      width: 90%;
+      align-items: center;
+      
+      .deekshadurationform-back-button {
+        width: 100%;
+        padding: 15px 0;
+      }
+      
+      .deekshadurationform-next-button {
+        width: 100%;
+        padding: 15px 20px;
+        margin: 0 20px;
+        font-size: 16px;
+      }
+    }
   }
 }
