--- a/src/pages/(loggedIn)/donation/NewDonation.scss
+++ b/src/pages/(loggedIn)/donation/NewDonation.scss
@@ -1946,6 +1946,7 @@
     .donor-details {
       width: 100%;
       height: fit-content;
+      max-height: 500px;
     }
 
     // Place donation history directly under donor details
