--- a/src/pages/applicationForm/applicationTabs/GuestDetails/GuestDetails.scss
+++ b/src/pages/applicationForm/applicationTabs/GuestDetails/GuestDetails.scss
@@ -571,7 +571,7 @@
 @media (max-width: 768px) {
   .guest-details {
     margin-left: 0px !important; // Remove left margin
-    padding: 10px !important; // Add small padding instead
+    // padding: 10px !important; // Add small padding instead
   }
 
   .tab-content {
