--- a/src/pages/(loggedIn)/requests/Requests.scss
+++ b/src/pages/(loggedIn)/requests/Requests.scss
@@ -1,6 +1,7 @@
 .top-section {
   display: flex;
   justify-content: space-between;
+  padding: 1em;
 
   h3 {
     font-family: var(--InterFontFamily);
